tests/ui/feature-gates/feature-gate-io_error_kind_in_core.stderr
error[E0658]: use of unstable library feature `core_io`
  --> $DIR/feature-gate-io_error_kind_in_core.rs:6:5
   |
LL | use core::io::ErrorKind as ErrorKindFromCore;
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #154046 <https://github.com/rust-lang/rust/issues/154046> for more information
   = help: add `#![feature(core_io)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0658`.
